# CustomDelegation

./: .gitignore  Cargo.toml  README.md  dfx.json
contracts/: CustomDelegation.did  README.md  canister_ids.json  dfx.json
contracts/CustomDelegation/: Cargo.toml
contracts/CustomDelegation/src/: delegation.rs  lib.rs  state.rs  storage.rs  types.rs
contracts/Validator/src/: lib.rs
did/: metaconnect.did.d.ts  metaconnect.did.js
example/VerifyCertification/: .gitignore  Cargo.toml  README.md
example/VerifyCertification/contract/: canister_ids.json  dfx.json
example/VerifyCertification/src/: certification.rs  lib.rs  main.rs
example/VerifyCertification/src/bls/: mod.rs
example/VerifyCertification/src/hash_tree/: hash_tree.rs  principal.rs
src/CustomDelegation/: Cargo.toml
src/CustomDelegation/src/: delegation.rs  http.rs  lib.rs  state.rs  storage.rs
src/Validator/: Cargo.toml
src/Validator/src/: lib.rs
src/certification-validate/: .gitignore  Cargo.toml
src/certification-validate/exp/: dfx.json  main.mo
src/certification-validate/src/: lib.rs  main.rs
src/types/: Cargo.toml
