[package]
name = "CustomDelegation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
lazy_static = "1.4"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_with = "2.0"
serde_json = "1.0.140"
sha2 = "^0.10" # set bound to match ic-certified-map bound
bip322 = "0.0.9"

# Captcha deps
base64 = "*"

hex-literal = "0.4.1"
regex = "1.11.1"

# All IC deps
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-certified-map = "0.4.0"
ic-metrics-encoder = "1.1.1"
ic-stable-structures = "0.6.7"
# hex = "0.4"
# lazy_static = "1.4"
# serde = "1"
# serde_bytes = "0.11"
# serde_cbor = "0.11"
# serde_with = "2.0"
# sha2 = "^0.10" # set bound to match ic-certified-map bound
# bip322 = "0.0.9"

# # Captcha deps
# base64 = "*"

# hex-literal = "0.4.1"
# regex = "1.11.1"

# # All IC deps
# candid = "0.10.13"
# ic-cdk = "0.17.1"
# ic-cdk-macros = "0.17.1"
# ic-certified-map = "0.4.0"
# ic-metrics-encoder = "1.1.1"
# ic-stable-structures = "0.6.7"