[package]
name = "CustomDelegation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
lazy_static = "1.4"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_with = "2.0"
sha2 = "^0.10" # set bound to match ic-certified-map bound

# Captcha deps
base64 = "*"

# All IC deps
candid = "0.8"
ic-cdk = "0.6"
ic-cdk-macros = "0.6"
ic-certified-map = "0.3"
ic-metrics-encoder = "1"
ic-stable-structures = "0.3"
hex-literal = "0.3"
regex = "1.7.0"

# dependency types
types = { path = "../types" }
