[package]
name = "Certification-Validate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-agent = "0.20.0"
ic-types = "0.4.1"
candid = "0.7.15"
anyhow = "1.0"
base64 = "0.13"
clap = { version = "3.1.8", features = ["derive", "cargo"] }
chrono = "0.4.19"
hex = "0.4.2"
leb128 = "0.2.4"
reqwest = { version = "0.11", features = [ "blocking", "rustls-tls" ] }
sha2 = "0.10"
serde = { version = "1.0.115", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
tokio = { version = "1", features = ["full"] }
garcon = "0.2.3"